src-ken&y/objects/Merge_Bulk__c.object
<CustomObject>
    <customHelpPage>HelpMerge</customHelpPage>
    <description>Merge multiple documents at one time according to customer template</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attach_to_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you would like to have a copy of the merged document attached to the source record.</description>
        <inlineHelpText>Check this box if you would like to have a copy of the merged document attached to the source record.</inlineHelpText>
        <label>Attach to Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <description>Provide the DeveloperName of the folder you would like a copy of the merge document to be stored in. If this is a User&apos;s personal folder, then provide the Id of the user.</description>
        <inlineHelpText>Provide the DeveloperName of the folder you would like a copy of the merge document to be stored in. If this is a User&apos;s personal folder, then provide the Id of the user.</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Count__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The maximum number of documents to merge into a single document when performing a bulk operation</description>
        <inlineHelpText>The maximum number of documents to merge into a single document</inlineHelpText>
        <label>Max Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge_Document__c</fullName>
        <label>Merge Document</label>
        <referenceTo>Merge_Document__c</referenceTo>
        <relationshipName>Bulk_Merges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merge_Flag__c</fullName>
        <description>The name of the checkbox field on the source document that indicates if this document requires a merge.</description>
        <inlineHelpText>The name of the checkbox field on the source document that indicates if this document requires a merge.</inlineHelpText>
        <label>Merge Flag</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Merge Bulk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MB-{0000000000}</displayFormat>
        <label>Merge Bulk</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Bulk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>